--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
       <div class="row">
           <div class="col-lg-8 col-sm-12">
               <div class="content">
+                <div background="Assets/background2.jpg" class="wrapper">"
                   <header>
 
                       <h1>Password Generator</h1>
@@ -24,13 +25,13 @@
                     
                   <form id="length">
                       <br>
-                      <b>Passwork Length:</b> <input type="number" name="thelength" id="charbox" placeholder="6-15" value="6" min="6" max="15">
-                      <br>
+                      <p>Passwork Length:</p> <input type="number" name="thelength" id="charBox" placeholder="6-15" value="6" min="6" max="15">
+                      <br><br>
                     
-                      <input type="checkbox" value="UpperCase" name="charTypes" id="upperCase">Upper Case Letters<br>
-                      <input type="checkbox" value="LowerCase" name="charTypes" id="lowerCase">Lower Case Letters<br>
-                      <input type="checkbox" value="Numbers" name="charTypes" id="numbers">Numbers<br>
-                      <input type="checkbox" value="SpecialCharacters" name="charTypes" id="specialCharacters">Special Characters<br>
+                      <input type="checkbox" value="UpperCase" name="charTypes" id="upperCase"> Upper Case Letters<br><br>
+                      <input type="checkbox" value="LowerCase" name="charTypes" id="lowerCase"> Lower Case Letters<br><br>
+                      <input type="checkbox" value="Numbers" name="charTypes" id="numbers"> Numbers<br><br>
+                      <input type="checkbox" value="SpecialCharacters" name="charTypes" id="specialCharacters"> Special Characters<br>
                       <br>
                   </form>
 
@@ -42,12 +43,21 @@
                   ></textarea>
                   <br>
 
-                  <button type="button" class="btn btn-light" onclick="generate();">Generate a Password</button>
-                  <button type="button" class="btn btn-outline-light" onclick="copy()" id="copy">Copy to Clipboard</button>
+                  <div class="row">
+                    <div class="col 12 col-md-6">
+                      <button type="button" class="btn btn-light btn-lg" onclick="generate();">Generate Password</button>
+                    </div>
+                    <br>
+                    <div class="col-12 col-md-6">
+                      <button type="button" onclick="copy()" id="copy" class="btn btn-outline-light btn-lg">Copy to Clipboard</button>
+                    </div>
+                  </div>
 
                 </div>
-            </div>
-        </div>
-    </div>
-  </body>
+              </div>
+          </div>
+      </div>
+  </div>
+  <script type="text/javascript" src="script.js"></script>
+</body>
 </html>
